@@ -37,24 +37,24 @@ EBUILD zfs-kmod-0.6.1-r2.ebuild 4247 SHA256 99332fddd683857632399b83bda56e2018da
 EBUILD zfs-kmod-0.6.2-r3.ebuild 3414 SHA256 9c26a3f82a0002084d4b96082cc589eb52046e6793691f07ca9d6651e9a0b5aa SHA512 1431b2204e791e71dc75ff6929deedf0201858a428b1008397ccaf329d09df4dfe32b0a820fd5de2f45b896b3558a6da901b3e7633cc0f78bf3b99cb9d5ccd1c WHIRLPOOL 45bdaf81d82bcfd464171a88e726d8158f31408daa68317b04fc57af896fd729d6505dd6906abbd7c0cced0eaf06d47d3b457b0f6051c3bee25297c7aca97490
 EBUILD zfs-kmod-0.6.2-r4.ebuild 3414 SHA256 abfd3a39d1bafe288474f2fd93191ea5261562d5f9829ec1fa3fa85aab7cc08e SHA512 cfa0ad4bb57d90ed53912736245ec7478d8cead7e943294b862c71191b869b311f1afb252ecdbf98856f65c16738ef65701f542d85eca5988ece486fcb84861b WHIRLPOOL 7ea56465d15cc5d9240cd637c2fad4083f2001fd1163617291d1dc968d43d5630479e3ffdd60db655a66f1441649ba5a1d79b5551dab98d3b70bed41848c0367
 EBUILD zfs-kmod-0.6.2-r5.ebuild 3414 SHA256 e1351abb1a3ac482eee2d253271cb4364462aef43d6135fbc6f61e487d358441 SHA512 586a58fd1b0e6289d9e90ce134a4ea90d7280c2313f8ac0d2d1d8c30d698685ae7c90089671e438a2ce4ddeb9144c2edb73f35014e8f84e693f5524b77dd1d2e WHIRLPOOL 0baa387212abba6fb03770f4a4d9cd299171b0420a6fdac107aee76033fa3a0de928c2ade5cf16a09b480df2b3fdd4f46dc0ccf5bb8e0c767fb21e4a6cdbefd4
-EBUILD zfs-kmod-0.6.3.ebuild 3720 SHA256 a8de939f0785a5724fbbb45c0ce866306a17840d1a96327e78e7ae498f01abab SHA512 32748806a3aa21ec2166f1168f24156b8a899c48d5ff0d39fdbe01d31afcbf9b1a248dd027bdd691eb43d90ebceb0bb1aecb5671cacb0238c58e82a2c928788d WHIRLPOOL 4aad366c945daf94c448c440a33dc79ab358d77623d20155cf3d3e098c0738073ebc0fc7420cf1cd5e4f670a86a9ec2cd7c1bfb81983a148e884f8a9a2e90952
-EBUILD zfs-kmod-9999.ebuild 3720 SHA256 e433c34b596456810f533722adcc6bb723df9d43fb04c23ed1d8d4b0eb774b6c SHA512 d58c55cb4c9b36513ff63fbef60d8cbac7949c6bf28f24fc5795ffd3afb7c7bad32ad7f783edd47cf40ffbeacbb59734e9fe37a51a5262f925e9c7a63473f579 WHIRLPOOL c4cc00b7b7445d54830fab2a8ebcc51b3a50e8b310e9a5f0232985a7021de2523722ceafd395633fdc3c7c1578ecd56c12a423f33d49b58fc2da333816050fba
-MISC ChangeLog 15033 SHA256 d7cf195e7b9142c439c2651d84c86e0534e52a24cdcc946cd79e473589139c1f SHA512 86533ad65fbd005081663ac7dd3e2eb1fb192188e98312c404f5991c9d0b353c194500a4cd5a95d0a600e387656f7419ca70dd4638cc5ac3dda78e79f0a0d7cf WHIRLPOOL a2f986676adfaeb63f42f18fcff2255d76f2b172c98c3462a47bcb522014ce2ac9d91b35f574c41aa32e600a8b5f1241975f38af9cc64a031967368d1cf8a31d
+EBUILD zfs-kmod-0.6.3.ebuild 3694 SHA256 e9eda8feccb64057d477a66c6ba0a4c6eb39a2c73fc43f0900f2916f3b2dfbc2 SHA512 d7397541a8a14785a5e5ae176e890ac2ae740c2fd4b0e142daf73d00cd41bcfc1c96dc41c8c813e050564a912d0aa6694fce607e745f4fbe049cf058906b5212 WHIRLPOOL f2e2c0d38e57700474d8a1d1c42ed00936b88d1d32d3a1194e50e83e382875821d801251ace29e763ead4380c7e63eab04e96f86e98fb3e2aabd3126a06a6d19
+EBUILD zfs-kmod-9999.ebuild 3694 SHA256 19ea2adef772b83a62684b048c4c59b28684127b5b1a7636e6eb0d7be865755d SHA512 cb8663e7c050087de6f48c2f07f0035666a8a5edfa40e5bf73022cd6742355411b106b8df7f88c0c9dd3695197aa44a9bec48d6ba9e6debfbaaf04b1956f2f93 WHIRLPOOL 7f35ebcb87560875d46921118982473d2666510a7e7f082b8dc2389560831cce32137712519f94b5c9308963b4b7762e6e15a1ee0ac6aeb4ad103bd74bc36026
+MISC ChangeLog 15214 SHA256 42c89ca9bcb7ae8eb99f1eed69b8e0e2d87b77754485ff3e17e7b4fdc1359006 SHA512 33448b8de01f8156df34e90b267b481b50057622e5c3b003681d5599f1f232c4af5d37a7bfafdba5bbeb63a24ae152e5eeda05bf2680baba0c9090c9d8f3f46c WHIRLPOOL 48c22e3e0c21c860eb8a7ef71b2393384337e708ae538fff15bb9b35b5a67d0a61ecf5754b399001c89b8c60b4f5338ac6f656fec1a4b72653600e9580ed12f2
 MISC metadata.xml 346 SHA256 e4506ca3f73e0a7799675ddb48b546ce6e3754e912f77d7d32aefac860b3fb82 SHA512 13885781ec432fcaa913c6365b6101b899ba5cf72573b29eb56a0d567466f15edf43de61fd1cab357149c5ed2b73c8277d69a88589f5f3d8f9ae3ef671f9ad8a WHIRLPOOL 319e314874a770ba6ef2687056bb97d6aaf081b0014cf1f0d08c39d70f24adabd19f0b4b3ce61c00fb72dade7589c9821c4730508967e32ea32a2101f74a35d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUCf+tAAoJECDuEZm+6Exkm50QAI7Ze2lbFk1okyqTNaZuTVFC
-eJTLDIMHwShn0uAL6kXKh2L0vu50jXFjNOTMJmWlo914qn4USZQWhPaYqHCJn6+w
-NLBhMqPRCBRi6fPotyhYfR5Pw4NgTapXREzcj6tk74o6NyFMhAwZkKIpnRUUxJst
-q2jCuKw019rRi9jFg4mc/RviL2uNMJSPtziPBbnI/hFbJmBWtlyduympp54KiV1T
-zWr3XTrI4K9Be/8rS8Zs0ckocCEyC+I5NfKrCWbBntanACY3Zy4CIOFgbcrhDsFV
-dH8XnMjhe1PF/7AvDthXt8omMORwyf6NscQXiSTMv+eeft+6rzzT+mA4xOTVQeUQ
-ZOd2AdRUmHdt13g5OY5Z7pgKvPZpDldfK/csHTTP6rujxZCiumfMWzGcz7UrMSxV
-L3Idmslo6LjoaIArU49n9xwaD2OKz64SBoEDgjjcwCpWgHp1hiShLc3UhcOCBEeu
-IeoR1rg4VlnDLfTeNCzoQN8jGutv3dLhAI9wXUHhrp3IXmuKyaG61+btShoXZdr7
-BMT9iwXhA4CG1+0TmQ9W35okMSt0hC3zwXNs+P+XkuU4DzA8xnNOi5ZmxQ4Eo25x
-JHl81nxlf5Ro0VrUFwNwyQkrQzb8r36OyMRX4DEDfp3zfcKSkKPABkx8tWUCKAJg
-fhKtNXF6ZmUG6pHXzD/t
-=LrkE
+iQIcBAEBCAAGBQJUGtPnAAoJECDuEZm+6ExkcTwP/R0IPb6tknnkBsZSu7iroDDD
+CkKGS13P6K7tOoZdZMLnsGzkwwu4B5ApUjn2ljZtU6LzPDJnilAxMRhXrnbuGdb8
+qa8DrcVPupcx4RZyfUqZvICQzIEqT5uE4u/mALcIM0qh18yQmZuUuVtvfOiEeSC3
+VzorDIkEyJa+ZkI7S74zZOAU/e7TLIZx1WGXLYwsOGPbjH4zOIFNveSHgF/J/SbP
+C418GikYQiq3bpAd1CUzTKmLuer9DXwPIUjls+ApYkd0DVDAIIfbdZKI5b6GNlqY
+9Fpp40t7yNvVKezZMOP3LbaRteFx2U98smBkMcXf8Caa4Lapu88wH4aMToDpUGDU
+EgipmsBRteK1Hip8OaMNwRNebo/N48JXdSNVnqwgx5ioVgysqvEG79bXFBcKJXUz
+fW8J7ji9ss3yDCVhrgW/UpU8isJYO73v8ALQQkxkYxQsnvi2WoQ+cLuwUSIZpoZG
+DJ+EaqIWgSthwCTZNUqq0yKiCYgbKbGXYWUWEBYsigY4lNNzXjpgJWyb97F5u+Wm
+tWVE6aqGuqxIV1kPGsraFh6rN5ZzpPrdtxCJ/quoTmP1gMVGX9dSTQUu5RUZ5MkR
+eitiCzDsM1wywYoCUn5Z5OO/JtlztbVRjk6k/LSogSP5Ht8NX/o0w79Y+SSNlJQf
+a3HB05OwDXN8eBurdREr
+=KitW
 -----END PGP SIGNATURE-----
