@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/zfs-kmod
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/zfs-kmod/ChangeLog,v 1.52 2014/09/05 18:23:36 ryao Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/zfs-kmod/ChangeLog,v 1.53 2014/09/18 12:45:25 ryao Exp $
+
+  18 Sep 2014; Richard Yao <ryao@gentoo.org> zfs-kmod-0.6.3.ebuild,
+  zfs-kmod-9999.ebuild:
+  Switch to bash arrays for --with-spl and --with-spl-obj; also fixed unquoted
+  string
 
   05 Sep 2014; Richard Yao <ryao@gentoo.org> zfs-kmod-0.6.3.ebuild,
   zfs-kmod-9999.ebuild:
